--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-mongodb = mongodb+srv://ckmobile:ckmobile123@nodetuts.qwlpv.mongodb.net/todos-database?retryWrites=true&w=majority
+mongodb = mongodb+srv://ashutosh_gupta:ashu2111@cluster0.vrmkk.mongodb.net/?retryWrites=true&w=majority
